--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                 <h2>Haggai Maron</h2>
 				<p>
 				I am a Research Scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a>.
-                I completed my Ph.D. at the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>.
-                    <br>
-                My main fields of interest are machine learning, optimization and shape analysis. More specifically, I am working on applying deep learning to irregular domains (e.g., graphs, point clouds, and surfaces) and graph/shape matching problems.
-                I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.                <br>
+        My main fields of interest are machine learning, optimization and shape analysis. More specifically, I am working on applying deep learning to irregular domains (e.g., graphs, point clouds, and surfaces) and graph/shape matching problems.
+        I completed my Ph.D. in 2019 at the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>.
+        I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>
 
                 My CV can be found <a href="cv.pdf">here</a>.
 
@@ -90,9 +89,7 @@
                 <!--
                 <li>September 2019: Our paper "Provably Powerful Graph Networks" was accepted to NeurIPS 2019!</li>
                 -->
-                <li>August 2019: Ph.D. thesis submitted! </li>
                 <li>July 2019: Check out our new <a href="http://irregulardeep.org/">blog</a> on deep learning of irregular data! Our first two blog posts explain <b> Invariant Graph Networks (IGNs)</b> and their power. These posts summarize our ICLR 2019, ICML 2019 and NeurIPS 2019 papers.</li>
-                <li>June 2019: I was selected to participate in the <a href="https://s2019.siggraph.org/conference/programs-events/organization-events/doctoral-consortium/">SIGGRAPH 2019 Doctoral Consortium</a>. </li>
                 <!--
                 <li>June 2019: We presented our work on <b> Invariant Neural Networks</b> at ICML 2019. The first talk, <a href="https://www.videoken.com/embed/wLHp27J0CyQ?tocitem=22">on our recent ICML paper</a>, was given at the deep learning theory session. Another talk on <a href="https://slideslive.com/38917604/invariant-graph-networks"> Invariant Graph Networks</a> was given by Yaron Lipman at the Learning and Reasoning with Graph-Structured Representations Workshop. </li>
                 -->
