--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li>June 2020: Two papers accepted to ICML 2020, <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a> </li>
                 <li>December 2019: We presented three papers at NeurIPS 2019: <a href="https://arxiv.org/abs/1905.11911">Controlling Neural Level Sets</a> and <a href="https://arxiv.org/abs/1905.11136">Provably Powerful Graph Networks</a> were presented in the main conference; <a href="projects/open_problems_igns/Open Problems Approximation Power of InvariantGraph Networks.pdf">Approximation Power of Invariant Graph Networks</a> was presented at the <a href="http://grlearning.github.io/">Graph Representation Learning Workshop</a>. </li>
                 <li>October 2019: I have joined NVIDIA Research as a Research Scientist!</li>
                 <!--
@@ -121,6 +122,24 @@
             <h1>Publications</h1>
         </div>
 
+      </div>
+   <!--Open problems -->
+      <div class="row" id="templatemo_publications_LargeScaleBD">
+          <div class="col-md-1"></div>
+          <div class="col-md-5 col-sm-7 col-xs-24">
+              <img src="projects/set2graph/img.png" width="450" " alt="">
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-16">
+              <h2>Set2Graph: Learning Graphs From Sets</h2>
+              <p>
+                Hadar Serviansky, Nimrod Segol, Jonathan Shlomi, Kyle Cranmer, Eilam Gross, Haggai Maron, Yaron Lipman<br>
+              <i>Preprint, 2020</i> <br>
+              </p>
+              <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
+              <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
+          </div>
+  </div><!-- end of row -->
 
       </div>
       <!--Open problems -->
@@ -137,7 +156,7 @@
               <i>Preprint, 2020</i> <br>
               </p>
               <a class="btn btn-default abstract" ptitle="
-Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentations from unlabeled data and has been applied effectively for do- main adaptation (DA) on images. It is still unknown if and how it can be leveraged for domain adaptation for 3D perception. Here we describe the first study of SSL for DA on point-clouds. We introduce a new pretext task, Region Reconstruction, motivated by the deformations encountered in sim-to-real transformation. We also demonstrate how it can be com- bined with a training procedure motivated by the MixUp method. Eval- uations on six domain adaptations across synthetic and real furniture data, demonstrate large improvement over previous work."> Abstract</a>
+Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentations from unlabeled data and has been applied effectively for do- main adaptation (DA) on images. It is still unknown if and how it can be leveraged for domain adaptation for 3D perception. Here we describe the first study of SSL for DA on point-clouds. We introduce a new pretext task, Region Reconstruction, motivated by the deformations encountered in sim-to-real transformation. We also demonstrate how it can be com- bined with a training procedure motivated by the MixUp method. Evaluations on six domain adaptations across synthetic and real furniture data, demonstrate large improvement over previous work."> Abstract</a>
               <a href="https://arxiv.org/pdf/2003.12641.pdf" class="btn btn-default">Paper </a>
               <a href="https://github.com/idanachi/RegRec_and_PCM" class="btn btn-default">GitHub </a>
 
@@ -160,7 +179,7 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
               <h2>On Learning Sets of Symmetric Elements</h2>
               <p>
                 Haggai Maron, Or Litany, Gal Chechik, Ethan Fetaya<br>
-              <i>Preprint, 2020</i> <br>
+              <i>International Conference on Machine Learning (ICML) 2020</i> <br>
               </p>
               <a class="btn btn-default abstract" ptitle="Learning from unordered sets is a fundamental learning setup, which is attracting increasing attention. Research in this area has focused on the case where elements of the set are represented by feature vectors, and far less emphasis has been given to the common case where set elements themselves adhere to certain symmetries. That case is relevant to numerous applications, from deblurring image bursts to multi-view 3D shape recognition and reconstruction. In this paper, we present a principled approach to learning sets of general symmetric elements. We first characterize the space of linear layers that are equivariant both to element reordering and to the inherent symmetries of elements, like translation in the case of images. We further show that networks that are composed of these layers, called Deep Sets for Symmetric elements layers (DSS), are universal approximators of both invariant and equivariant functions. DSS layers are also straightforward to implement. Finally, we show that they improve over existing set-learning architectures in a series of experiments with images, graphs, and point-clouds"> Abstract</a>
               <a href="https://arxiv.org/pdf/2002.08599" class="btn btn-default">Paper </a>
@@ -181,7 +200,7 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
               <h2>Learning Algebraic Multigrid Using Graph Neural Networks</h2>
               <p>
               Ilay Luz, Meirav Galun, Haggai Maron, Ronen Basri, Irad Yavneh<br>
-              <i>Preprint, 2020</i> <br>
+              <i>International Conference on Machine Learning (ICML) 2020</i> <br>
               </p>
               <a class="btn btn-default abstract" ptitle="Efficient numerical solvers for sparse linear systems are crucial in science and engineering. One of the fastest methods for solving large-scale sparse linear systems is algebraic multigrid (AMG). The main challenge in the construction of AMG algorithms is the selection of the prolongation operator--a problem-dependent sparse matrix which governs the multiscale hierarchy of the solver and is critical to its efficiency. Over many years, numerous methods have been developed for this task, and yet there is no known single right answer except in very special cases. Here we propose a framework for learning AMG prolongation operators for linear systems with sparse symmetric positive (semi-) definite matrices. We train a single graph neural network to learn a mapping from an entire class of such matrices to prolongation operators, using an efficient unsupervised loss function. Experiments on a broad class of problems demonstrate improved convergence rates compared to classical AMG, demonstrating the potential utility of neural networks for developing sparse system solvers."> Abstract</a>
               <a href="https://arxiv.org/pdf/2003.05744" class="btn btn-default">Paper </a>
@@ -190,24 +209,7 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
 
 
 
-      </div>
-   <!--Open problems -->
-      <div class="row" id="templatemo_publications_LargeScaleBD">
-          <div class="col-md-1"></div>
-          <div class="col-md-5 col-sm-7 col-xs-24">
-              <img src="projects/set2graph/img.png" width="450" " alt="">
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-16">
-              <h2>Set2Graph: Learning Graphs From Sets</h2>
-              <p>
-                Hadar Serviansky, Nimrod Segol, Jonathan Shlomi, Kyle Cranmer, Eilam Gross, Haggai Maron, Yaron Lipman<br>
-              <i>Preprint, 2020</i> <br>
-              </p>
-              <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
-              <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
-          </div>
-  </div><!-- end of row -->
+
 
 
 
