--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                <li>June 2020: Two papers accepted to ICML 2020, <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a> </li>
+                <li>June 2020: Two papers accepted to ICML 2020: <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a>.</li>
                 <li>December 2019: We presented three papers at NeurIPS 2019: <a href="https://arxiv.org/abs/1905.11911">Controlling Neural Level Sets</a> and <a href="https://arxiv.org/abs/1905.11136">Provably Powerful Graph Networks</a> were presented in the main conference; <a href="projects/open_problems_igns/Open Problems Approximation Power of InvariantGraph Networks.pdf">Approximation Power of Invariant Graph Networks</a> was presented at the <a href="http://grlearning.github.io/">Graph Representation Learning Workshop</a>. </li>
                 <li>October 2019: I have joined NVIDIA Research as a Research Scientist!</li>
                 <!--
