--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li>July 2020: I am organizing the first <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> that will take place virtually on August 2nd 2020.</li>
                 <li>June 2020: Two papers accepted to ICML 2020: <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a>.</li>
                 <li>December 2019: We presented three papers at NeurIPS 2019: <a href="https://arxiv.org/abs/1905.11911">Controlling Neural Level Sets</a> and <a href="https://arxiv.org/abs/1905.11136">Provably Powerful Graph Networks</a> were presented in the main conference; <a href="projects/open_problems_igns/Open Problems Approximation Power of InvariantGraph Networks.pdf">Approximation Power of Invariant Graph Networks</a> was presented at the <a href="http://grlearning.github.io/">Graph Representation Learning Workshop</a>. </li>
+                <!--
                 <li>October 2019: I have joined NVIDIA Research as a Research Scientist!</li>
+                -->
                 <!--
                 <li>September 2019: Our paper "Provably Powerful Graph Networks" was accepted to NeurIPS 2019!</li>
                 -->
-                <li>July 2019: Check out our new <a href="http://irregulardeep.org/">blog</a> on deep learning of irregular data! Our first two blog posts explain <b> Invariant Graph Networks (IGNs)</b> and their power. These posts summarize our ICLR 2019, ICML 2019 and NeurIPS 2019 papers.</li>
+                <li>Check out our new <a href="http://irregulardeep.org/">blog</a> on deep learning of irregular data! Our first two blog posts explain <b> Invariant Graph Networks (IGNs)</b> and their power. These posts summarize our ICLR 2019, ICML 2019 and NeurIPS 2019 papers.</li>
                 <!--
                 <li>June 2019: We presented our work on <b> Invariant Neural Networks</b> at ICML 2019. The first talk, <a href="https://www.videoken.com/embed/wLHp27J0CyQ?tocitem=22">on our recent ICML paper</a>, was given at the deep learning theory session. Another talk on <a href="https://slideslive.com/38917604/invariant-graph-networks"> Invariant Graph Networks</a> was given by Yaron Lipman at the Learning and Reasoning with Graph-Structured Representations Workshop. </li>
                 -->
@@ -123,6 +126,30 @@
         </div>
 
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/AuxiLearn/framework.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Auxiliary Learning by Implicit Differentiation</h2>
+                 <p>
+                   Aviv Navon*, Idan Achituve*, Haggai Maron, Gal Chechik**, Ethan Fetaya** (*/** equal contribution)<br>
+                 <i>Preprint, 2020</i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Training with multiple auxiliary tasks is a common practice used in deep learning for improving the performance on the main task of interest. Two main challenges arise in this multi-task learning setting: (i) Designing useful auxiliary tasks; and (ii) Combining auxiliary tasks into a single coherent loss. We propose a novel framework, \textit{AuxiLearn}, that targets both challenges, based on implicit differentiation. First, when useful auxiliaries are known, we propose learning a network that combines all losses into a single coherent objective function. This network can learn \textit{non-linear} interactions between auxiliary tasks. Second, when no useful auxiliary task is known, we describe how to learn a network that generates a meaningful, novel auxiliary task. We evaluate AuxiLearn in a series of tasks and domains, including image segmentation and learning with attributes. We find that AuxiLearn consistently improves accuracy compared with competing methods."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2007.02693" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/AvivNavon/AuxiLearn" class="btn btn-default">GitHub</a>
+
+
+             </div>
+     </div><!-- end of row -->
+
+
    <!--Open problems -->
       <div class="row" id="templatemo_publications_LargeScaleBD">
           <div class="col-md-1"></div>
