--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> Our ICML 2020 paper <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> received the outstanding paper award (AKA best paper award). </li>
                 <li>July 2020: I am organizing the first <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> that will take place virtually on August 2nd 2020.</li>
                 <li>June 2020: Two papers accepted to ICML 2020: <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elemenmts</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a>.</li>
                 <li>December 2019: We presented three papers at NeurIPS 2019: <a href="https://arxiv.org/abs/1905.11911">Controlling Neural Level Sets</a> and <a href="https://arxiv.org/abs/1905.11136">Provably Powerful Graph Networks</a> were presented in the main conference; <a href="projects/open_problems_igns/Open Problems Approximation Power of InvariantGraph Networks.pdf">Approximation Power of Invariant Graph Networks</a> was presented at the <a href="http://grlearning.github.io/">Graph Representation Learning Workshop</a>. </li>
@@ -208,8 +209,11 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
                 Haggai Maron, Or Litany, Gal Chechik, Ethan Fetaya<br>
               <i>International Conference on Machine Learning (ICML) 2020</i> <br>
               </p>
+              <p style="color:red;">ICML 2020 outstanding paper award</p>
               <a class="btn btn-default abstract" ptitle="Learning from unordered sets is a fundamental learning setup, which is attracting increasing attention. Research in this area has focused on the case where elements of the set are represented by feature vectors, and far less emphasis has been given to the common case where set elements themselves adhere to certain symmetries. That case is relevant to numerous applications, from deblurring image bursts to multi-view 3D shape recognition and reconstruction. In this paper, we present a principled approach to learning sets of general symmetric elements. We first characterize the space of linear layers that are equivariant both to element reordering and to the inherent symmetries of elements, like translation in the case of images. We further show that networks that are composed of these layers, called Deep Sets for Symmetric elements layers (DSS), are universal approximators of both invariant and equivariant functions. DSS layers are also straightforward to implement. Finally, we show that they improve over existing set-learning architectures in a series of experiments with images, graphs, and point-clouds"> Abstract</a>
               <a href="https://arxiv.org/pdf/2002.08599" class="btn btn-default">Paper </a>
+              <a href="index.html" class="btn btn-default">Code (coming soon)</a>
+
           </div>
   </div><!-- end of row -->
 
@@ -451,7 +455,8 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
                 <p>
                 Haggai Maron and Yaron Lipman<br>
                 <i>32nd Annual Conference on Neural Information Processing Systems (NeurIPS 2018)</i> <br>
-                spotlight presentation (3.5% acceptance rate) <br>
+                <p style="color:red;">spotlight presentation (3.5% acceptance rate)</p>
+
                 </p>
                 <a class="btn btn-default abstract" ptitle="In this paper we address the graph matching problem. Following the recent works of \cite{zaslavskiy2009path,Vestner2017} we analyze and generalize the idea of concave relaxations. We introduce the concepts of conditionally concave and probably conditionally concave energies on polytopes and show that they encapsulate many instances of the graph matching problem, including matching Euclidean graphs and graphs on surfaces. We further prove that local minima of probably conditionally concave energies on general matching polytopes (e.g., doubly stochastic) are with high probability extreme points of the matching polytope (e.g., permutations)."> Abstract</a>
                 <a href="https://arxiv.org/pdf/1807.09722.pdf" class="btn btn-default">  Arxiv </a>
