--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                <li> Our ICML 2020 paper <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elements</a> received the outstanding paper award (AKA best paper award). </li>
+                <li> Our ICML 2020 paper <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elements</a> received the <b>outstanding paper award</b> (best paper award). </li>
                 <li>July 2020: I am organizing the first <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> that will take place virtually on August 2nd 2020.</li>
                 <li>June 2020: Two papers accepted to ICML 2020: <a href="https://arxiv.org/pdf/2002.08599">On Learning Sets of Symmetric Elements</a> and <a href="https://arxiv.org/pdf/2003.05744">Learning Algebraic Multigrid Using Graph Neural Networks</a>.</li>
                 <li>December 2019: We presented three papers at NeurIPS 2019: <a href="https://arxiv.org/abs/1905.11911">Controlling Neural Level Sets</a> and <a href="https://arxiv.org/abs/1905.11136">Provably Powerful Graph Networks</a> were presented in the main conference; <a href="projects/open_problems_igns/Open Problems Approximation Power of InvariantGraph Networks.pdf">Approximation Power of Invariant Graph Networks</a> was presented at the <a href="http://grlearning.github.io/">Graph Representation Learning Workshop</a>. </li>
@@ -127,6 +127,27 @@
         </div>
 
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/jets/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Secondary Vertex Finding in Jets with Neural Networks</h2>
+                 <p>
+                 Jonathan Shlomi, Sanmay Ganguly, Eilam Gross, Kyle Cranmer, Yaron Lipman, Hadar Serviansky, Haggai Maron, Nimrod Segol<br>
+                 <i>Preprint, 2020</i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Jet classification is an important ingredient in measurements and searches for new physics at particle coliders, and secondary vertex reconstruction is a key intermediate step in building powerful jet classifiers. We use a neural network to perform vertex finding inside jets in order to improve the classification performance, with a focus on separation of bottom vs. charm flavor tagging. We implement a novel, universal set-to-graph model, which takes into account information from all tracks in a jet to determine if pairs of tracks originated from a common vertex. We explore different performance metrics and find our method to outperform traditional approaches in accurate secondary vertex reconstruction."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2008.02831" class="btn btn-default">Paper </a>
+
+
+             </div>
+      </div><!-- end of row -->
 
 
       <!--Open problems -->
@@ -213,7 +234,7 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
               <a class="btn btn-default abstract" ptitle="Learning from unordered sets is a fundamental learning setup, which is attracting increasing attention. Research in this area has focused on the case where elements of the set are represented by feature vectors, and far less emphasis has been given to the common case where set elements themselves adhere to certain symmetries. That case is relevant to numerous applications, from deblurring image bursts to multi-view 3D shape recognition and reconstruction. In this paper, we present a principled approach to learning sets of general symmetric elements. We first characterize the space of linear layers that are equivariant both to element reordering and to the inherent symmetries of elements, like translation in the case of images. We further show that networks that are composed of these layers, called Deep Sets for Symmetric elements layers (DSS), are universal approximators of both invariant and equivariant functions. DSS layers are also straightforward to implement. Finally, we show that they improve over existing set-learning architectures in a series of experiments with images, graphs, and point-clouds"> Abstract</a>
               <a href="https://arxiv.org/pdf/2002.08599" class="btn btn-default">Paper </a>
               <a href="index.html" class="btn btn-default">Code (coming soon)</a>
-
+              <a href="https://icml.cc/virtual/2020/poster/6022" class="btn btn-default">Video+Slides</a>
           </div>
   </div><!-- end of row -->
 
@@ -235,6 +256,8 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
               </p>
               <a class="btn btn-default abstract" ptitle="Efficient numerical solvers for sparse linear systems are crucial in science and engineering. One of the fastest methods for solving large-scale sparse linear systems is algebraic multigrid (AMG). The main challenge in the construction of AMG algorithms is the selection of the prolongation operator--a problem-dependent sparse matrix which governs the multiscale hierarchy of the solver and is critical to its efficiency. Over many years, numerous methods have been developed for this task, and yet there is no known single right answer except in very special cases. Here we propose a framework for learning AMG prolongation operators for linear systems with sparse symmetric positive (semi-) definite matrices. We train a single graph neural network to learn a mapping from an entire class of such matrices to prolongation operators, using an efficient unsupervised loss function. Experiments on a broad class of problems demonstrate improved convergence rates compared to classical AMG, demonstrating the potential utility of neural networks for developing sparse system solvers."> Abstract</a>
               <a href="https://arxiv.org/pdf/2003.05744" class="btn btn-default">Paper </a>
+              <a href="https://icml.cc/virtual/2020/poster/6369" class="btn btn-default">Video+Slides</a>
+
           </div>
   </div><!-- end of row -->
 
