--- a/index.html
+++ b/index.html
@@ -128,7 +128,23 @@
         </div>
 
       </div>
-
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/set2graph/img.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Set2Graph: Learning Graphs From Sets</h2>
+                 <p>
+                   Hadar Serviansky, Nimrod Segol, Jonathan Shlomi, Kyle Cranmer, Eilam Gross, Haggai Maron, Yaron Lipman<br>
+                   <i> 34th Annual Conference on Neural Information Processing Systems (NeurIPS 2020) </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
+             </div>
+      </div><!-- end of row -->
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -173,23 +189,7 @@
      </div><!-- end of row -->
 
 
-   <!--Open problems -->
-      <div class="row" id="templatemo_publications_LargeScaleBD">
-          <div class="col-md-1"></div>
-          <div class="col-md-5 col-sm-7 col-xs-24">
-              <img src="projects/set2graph/img.png" width="450" " alt="">
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-16">
-              <h2>Set2Graph: Learning Graphs From Sets</h2>
-              <p>
-                Hadar Serviansky, Nimrod Segol, Jonathan Shlomi, Kyle Cranmer, Eilam Gross, Haggai Maron, Yaron Lipman<br>
-              <i>Preprint, 2020</i> <br>
-              </p>
-              <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
-              <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
-          </div>
-  </div><!-- end of row -->
+
 
       </div>
       <!--Open problems -->
