--- a/index.html
+++ b/index.html
@@ -126,6 +126,89 @@
         <div class="row">
             <h1>Publications</h1>
         </div>
+      </div>
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/dereverb/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Position-Agnostic Multi-Microphone Speech Dereverberation</h2>
+                 <p>
+                   Yochai Yemini, Ethan Fetaya, Haggai Maron, Sharon Gannot<br>
+                   <i> Preprint, 2020 </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Neural networks (NNs) have been widely applied in speech processing tasks, and, in particular, those employing microphone arrays. Nevertheless, most of the existing NN architectures can only deal with fixed and position-specific microphones arrays. In this paper, we present an NN architecture that is able to cope with microphone arrays on which no prior knowledge is presumed, and demonstrate its applicability on the speech dereverberation problem. To this end, our approach harnesses recent advances in the Deep Sets framework \cite{zaheer,sets} to design an architecture that enhances the reveberant log-spectrum. We provide a setup for training and testing such a network. Our experiments, using REVERB challenge datasets,  show that the proposed position-agnostic setup performs comparably with the position-aware framework and sometimes slightly better, even with less microphones. In addition, it substantially improves performance over the closest single microphone architecture. "> Abstract</a>
+             </div>
+      </div><!-- end of row -->
+
+    </div>
+    <!--Open problems -->
+       <div class="row" id="templatemo_publications_LargeScaleBD">
+           <div class="col-md-1"></div>
+           <div class="col-md-5 col-sm-7 col-xs-24">
+               <img src="projects/size_gen/rep.png" width="450" " alt="">
+           </div>
+           <div class="col-md-1"></div>
+           <div class="col-md-16">
+               <h2>On Size Generalization in Graph Neural Networks</h2>
+               <p>
+                 Gilad Yehudai, Ethan Fetaya, Eli Meirom, Gal Chechik, Haggai Maron<br>
+                 <i> Preprint, 2020 </i> <br>
+               </p>
+               <a class="btn btn-default abstract" ptitle="Graph neural networks (GNNs) can process graphs of different sizes but their capacity to generalize across sizes is still not well understood. Size generalization is key to numerous GNN applications, from solving combinatorial optimization problems to learning in molecular biology. In such problems, obtaining labels and training on large graphs can be prohibitively expensive, but training on smaller graphs is possible.
+This paper puts forward the size-generalization question and characterizes important aspects of that problem theoretically and empirically. We show that even for very simple tasks, GNNs do not naturally generalize to graphs of larger size. Instead, their generalization performance is closely related to the distribution of patterns of connectivity and features and how that distribution changes from small to large graphs. Specifically, we show that in many cases, there are GNNs that can perfectly solve a task on small graphs but generalize poorly to large graphs and that these GNNs are encountered in practice. We then formalize size generalization as a domain-adaption problem and describe two learning setups where size generalization can be improved. First, as a self-supervised learning problem (SSL) over the target domain of large graphs. Second, as a semi-supervised learning problem when few samples are available in the target domain. We demonstrate the efficacy of these solutions on a diverse set of benchmark graph datasets."> Abstract</a>
+               <a href="https://arxiv.org/pdf/2010.08853" class="btn btn-default">Paper </a>
+           </div>
+    </div><!-- end of row -->
+
+  </div>
+  <!--Open problems -->
+     <div class="row" id="templatemo_publications_LargeScaleBD">
+         <div class="col-md-1"></div>
+         <div class="col-md-5 col-sm-7 col-xs-24">
+             <img src="projects/rotation_equi/rep.png" width="450" " alt="">
+         </div>
+         <div class="col-md-1"></div>
+         <div class="col-md-16">
+             <h2>On the Universality of Rotation Equivariant Point Cloud Networks</h2>
+             <p>
+               Nadav Dym, Haggai Maron<br>
+               <i> Preprint, 2020 </i> <br>
+             </p>
+             <a class="btn btn-default abstract" ptitle="Learning functions on point clouds has applications in many fields, including computer vision, computer graphics, physics, and chemistry. Recently, there has been a growing interest in neural architectures that are invariant or equivariant to all three shape-preserving transformations of point clouds: translation, rotation, and permutation.
+In this paper, we present a first study of the approximation power of these architectures. We first derive two sufficient conditions for an equivariant architecture to have the universal approximation property, based on a novel characterization of the space of equivariant polynomials. We then use these conditions to show that two recently suggested models are universal, and for devising two other novel universal architectures."> Abstract</a>
+             <a href="https://arxiv.org/pdf/2010.02449" class="btn btn-default">Paper </a>
+         </div>
+  </div><!-- end of row -->
+
+</div>
+<!--Open problems -->
+   <div class="row" id="templatemo_publications_LargeScaleBD">
+       <div class="col-md-1"></div>
+       <div class="col-md-5 col-sm-7 col-xs-24">
+           <img src="projects/epidemic/rep.png" width="450" " alt="">
+       </div>
+       <div class="col-md-1"></div>
+       <div class="col-md-16">
+           <h2>How to Stop Epidemics: Controlling Graph Dynamics with Reinforcement Learning and Graph Neural Networks</h2>
+           <p>
+            Eli A Meirom, Haggai Maron, Shie Mannor, Gal Chechik<br>
+             <i> Preprint, 2020 </i> <br>
+           </p>
+           <a class="btn btn-default abstract" ptitle="We consider the problem of monitoring and controlling a partially-observed dynamic process that spreads over a graph. This problem naturally arises in contexts such as scheduling virus tests or quarantining individuals to curb a spreading epidemic; detecting fake news spreading on online networks by manually inspecting posted articles; and targeted marketing where the objective is to encourage the spread of a product. Curbing the spread and constraining the fraction of infected population becomes challenging when only a fraction of the population can be tested or quarantined.
+To address this challenge, we formulate this setup as a sequential decision problem over a graph. In face of an exponential state space, combinatorial action space and partial observability, we design RLGN, a novel tractable Reinforcement Learning (RL) scheme to prioritize which nodes should be tested, using Graph Neural Networks (GNNs) to rank the graph nodes. We evaluate this approach in three types of social-networks: community-structured, preferential attachment, and based on statistics from real cellular tracking. RLGN consistently outperforms all baselines in our experiments. It suggests that prioritizing tests using RL on temporal graphs can increase the number of healthy people by 25% and contain the epidemic 30% more often than supervised approaches and 2.5X more often than non-learned baselines using the same resources."> Abstract</a>
+           <a href="https://arxiv.org/pdf/2010.05313" class="btn btn-default">Paper </a>
+       </div>
+</div><!-- end of row -->
+
+
+
+
+
+
 
       </div>
       <!--Open problems -->
@@ -143,6 +226,8 @@
                  </p>
                  <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
                  <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/hadarser/SetToGraphPaper" class="btn btn-default">Code </a>
+
              </div>
       </div><!-- end of row -->
 
