--- a/index.html
+++ b/index.html
@@ -205,6 +205,55 @@ To address this challenge, we formulate this setup as a sequential decision prob
 </div><!-- end of row -->
 
 
+<!--Open problems -->
+   <div class="row" id="templatemo_publications_LargeScaleBD">
+       <div class="col-md-1"></div>
+       <div class="col-md-5 col-sm-7 col-xs-24">
+           <img src="projects/AuxiLearn/framework.png" width="450" " alt="">
+       </div>
+       <div class="col-md-1"></div>
+       <div class="col-md-16">
+           <h2>Auxiliary Learning by Implicit Differentiation</h2>
+           <p>
+             Aviv Navon*, Idan Achituve*, Haggai Maron, Gal Chechik**, Ethan Fetaya** (*/** equal contribution)<br>
+           <i>Preprint, 2020</i> <br>
+           </p>
+           <a class="btn btn-default abstract" ptitle="Training with multiple auxiliary tasks is a common practice used in deep learning for improving the performance on the main task of interest. Two main challenges arise in this multi-task learning setting: (i) Designing useful auxiliary tasks; and (ii) Combining auxiliary tasks into a single coherent loss. We propose a novel framework, \textit{AuxiLearn}, that targets both challenges, based on implicit differentiation. First, when useful auxiliaries are known, we propose learning a network that combines all losses into a single coherent objective function. This network can learn \textit{non-linear} interactions between auxiliary tasks. Second, when no useful auxiliary task is known, we describe how to learn a network that generates a meaningful, novel auxiliary task. We evaluate AuxiLearn in a series of tasks and domains, including image segmentation and learning with attributes. We find that AuxiLearn consistently improves accuracy compared with competing methods."> Abstract</a>
+           <a href="https://arxiv.org/abs/2007.02693" class="btn btn-default">Paper </a>
+           <a href="https://github.com/AvivNavon/AuxiLearn" class="btn btn-default">GitHub</a>
+
+
+       </div>
+</div><!-- end of row -->
+
+
+
+
+</div>
+<!--Open problems -->
+<div class="row" id="templatemo_publications_LargeScaleBD">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 col-sm-7 col-xs-24">
+        <img src="projects/DA_3D_SSL/img.png" width="450" " alt="">
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-16">
+        <h2>Self-Supervised Learning for Domain Adaptation on Point-Clouds</h2>
+        <p>
+          Idan Achituve, Haggai Maron, Gal Chechik<br>
+        <i>Preprint, 2020</i> <br>
+        </p>
+        <a class="btn btn-default abstract" ptitle="
+Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentations from unlabeled data and has been applied effectively for do- main adaptation (DA) on images. It is still unknown if and how it can be leveraged for domain adaptation for 3D perception. Here we describe the first study of SSL for DA on point-clouds. We introduce a new pretext task, Region Reconstruction, motivated by the deformations encountered in sim-to-real transformation. We also demonstrate how it can be com- bined with a training procedure motivated by the MixUp method. Evaluations on six domain adaptations across synthetic and real furniture data, demonstrate large improvement over previous work."> Abstract</a>
+        <a href="https://arxiv.org/pdf/2003.12641.pdf" class="btn btn-default">Paper </a>
+        <a href="https://github.com/idanachi/RegRec_and_PCM" class="btn btn-default">GitHub </a>
+
+
+
+
+    </div>
+</div><!-- end of row -->
+
 
 
 
@@ -242,7 +291,7 @@ To address this challenge, we formulate this setup as a sequential decision prob
                  <h2>Secondary Vertex Finding in Jets with Neural Networks</h2>
                  <p>
                  Jonathan Shlomi, Sanmay Ganguly, Eilam Gross, Kyle Cranmer, Yaron Lipman, Hadar Serviansky, Haggai Maron, Nimrod Segol<br>
-                 <i>Preprint, 2020</i> <br>
+                 <i>Technical report, 2020</i> <br>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Jet classification is an important ingredient in measurements and searches for new physics at particle coliders, and secondary vertex reconstruction is a key intermediate step in building powerful jet classifiers. We use a neural network to perform vertex finding inside jets in order to improve the classification performance, with a focus on separation of bottom vs. charm flavor tagging. We implement a novel, universal set-to-graph model, which takes into account information from all tracks in a jet to determine if pairs of tracks originated from a common vertex. We explore different performance metrics and find our method to outperform traditional approaches in accurate secondary vertex reconstruction."> Abstract</a>
                  <a href="https://arxiv.org/abs/2008.02831" class="btn btn-default">Paper </a>
@@ -251,55 +300,6 @@ To address this challenge, we formulate this setup as a sequential decision prob
              </div>
       </div><!-- end of row -->
 
-
-      <!--Open problems -->
-         <div class="row" id="templatemo_publications_LargeScaleBD">
-             <div class="col-md-1"></div>
-             <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/AuxiLearn/framework.png" width="450" " alt="">
-             </div>
-             <div class="col-md-1"></div>
-             <div class="col-md-16">
-                 <h2>Auxiliary Learning by Implicit Differentiation</h2>
-                 <p>
-                   Aviv Navon*, Idan Achituve*, Haggai Maron, Gal Chechik**, Ethan Fetaya** (*/** equal contribution)<br>
-                 <i>Preprint, 2020</i> <br>
-                 </p>
-                 <a class="btn btn-default abstract" ptitle="Training with multiple auxiliary tasks is a common practice used in deep learning for improving the performance on the main task of interest. Two main challenges arise in this multi-task learning setting: (i) Designing useful auxiliary tasks; and (ii) Combining auxiliary tasks into a single coherent loss. We propose a novel framework, \textit{AuxiLearn}, that targets both challenges, based on implicit differentiation. First, when useful auxiliaries are known, we propose learning a network that combines all losses into a single coherent objective function. This network can learn \textit{non-linear} interactions between auxiliary tasks. Second, when no useful auxiliary task is known, we describe how to learn a network that generates a meaningful, novel auxiliary task. We evaluate AuxiLearn in a series of tasks and domains, including image segmentation and learning with attributes. We find that AuxiLearn consistently improves accuracy compared with competing methods."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2007.02693" class="btn btn-default">Paper </a>
-                 <a href="https://github.com/AvivNavon/AuxiLearn" class="btn btn-default">GitHub</a>
-
-
-             </div>
-     </div><!-- end of row -->
-
-
-
-
-      </div>
-      <!--Open problems -->
-      <div class="row" id="templatemo_publications_LargeScaleBD">
-          <div class="col-md-1"></div>
-          <div class="col-md-5 col-sm-7 col-xs-24">
-              <img src="projects/DA_3D_SSL/img.png" width="450" " alt="">
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-16">
-              <h2>Self-Supervised Learning for Domain Adaptation on Point-Clouds</h2>
-              <p>
-                Idan Achituve, Haggai Maron, Gal Chechik<br>
-              <i>Preprint, 2020</i> <br>
-              </p>
-              <a class="btn btn-default abstract" ptitle="
-Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentations from unlabeled data and has been applied effectively for do- main adaptation (DA) on images. It is still unknown if and how it can be leveraged for domain adaptation for 3D perception. Here we describe the first study of SSL for DA on point-clouds. We introduce a new pretext task, Region Reconstruction, motivated by the deformations encountered in sim-to-real transformation. We also demonstrate how it can be com- bined with a training procedure motivated by the MixUp method. Evaluations on six domain adaptations across synthetic and real furniture data, demonstrate large improvement over previous work."> Abstract</a>
-              <a href="https://arxiv.org/pdf/2003.12641.pdf" class="btn btn-default">Paper </a>
-              <a href="https://github.com/idanachi/RegRec_and_PCM" class="btn btn-default">GitHub </a>
-
-
-
-
-          </div>
-      </div><!-- end of row -->
 
 
       </div>
