--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ To address this challenge, we formulate this setup as a sequential decision prob
         <h2>Self-Supervised Learning for Domain Adaptation on Point-Clouds</h2>
         <p>
           Idan Achituve, Haggai Maron, Gal Chechik<br>
-        <i>Preprint, 2020</i> <br>
+        <i>Winter Conference on Applications of Computer Vision (WACV), 2021</i> <br>
         </p>
         <a class="btn btn-default abstract" ptitle="
 Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentations from unlabeled data and has been applied effectively for do- main adaptation (DA) on images. It is still unknown if and how it can be leveraged for domain adaptation for 3D perception. Here we describe the first study of SSL for DA on point-clouds. We introduce a new pretext task, Region Reconstruction, motivated by the deformations encountered in sim-to-real transformation. We also demonstrate how it can be com- bined with a training procedure motivated by the MixUp method. Evaluations on six domain adaptations across synthetic and real furniture data, demonstrate large improvement over previous work."> Abstract</a>
