--- a/index.html
+++ b/index.html
@@ -166,25 +166,7 @@ This paper puts forward the size-generalization question and characterizes impor
            </div>
     </div><!-- end of row -->
 
-  </div>
-  <!--Open problems -->
-     <div class="row" id="templatemo_publications_LargeScaleBD">
-         <div class="col-md-1"></div>
-         <div class="col-md-5 col-sm-7 col-xs-24">
-             <img src="projects/rotation_equi/rep.png" width="450" " alt="">
-         </div>
-         <div class="col-md-1"></div>
-         <div class="col-md-16">
-             <h2>On the Universality of Rotation Equivariant Point Cloud Networks</h2>
-             <p>
-               Nadav Dym, Haggai Maron<br>
-               <i> Preprint, 2020 </i> <br>
-             </p>
-             <a class="btn btn-default abstract" ptitle="Learning functions on point clouds has applications in many fields, including computer vision, computer graphics, physics, and chemistry. Recently, there has been a growing interest in neural architectures that are invariant or equivariant to all three shape-preserving transformations of point clouds: translation, rotation, and permutation.
-In this paper, we present a first study of the approximation power of these architectures. We first derive two sufficient conditions for an equivariant architecture to have the universal approximation property, based on a novel characterization of the space of equivariant polynomials. We then use these conditions to show that two recently suggested models are universal, and for devising two other novel universal architectures."> Abstract</a>
-             <a href="https://arxiv.org/pdf/2010.02449" class="btn btn-default">Paper </a>
-         </div>
-  </div><!-- end of row -->
+
 
 </div>
 <!--Open problems -->
@@ -206,6 +188,25 @@ To address this challenge, we formulate this setup as a sequential decision prob
        </div>
 </div><!-- end of row -->
 
+</div>
+<!--Open problems -->
+   <div class="row" id="templatemo_publications_LargeScaleBD">
+       <div class="col-md-1"></div>
+       <div class="col-md-5 col-sm-7 col-xs-24">
+           <img src="projects/rotation_equi/rep.png" width="450" " alt="">
+       </div>
+       <div class="col-md-1"></div>
+       <div class="col-md-16">
+           <h2>On the Universality of Rotation Equivariant Point Cloud Networks</h2>
+           <p>
+             Nadav Dym, Haggai Maron<br>
+             <i> International Conference on Learning Representations (ICLR) 2021</i> <br>
+           </p>
+           <a class="btn btn-default abstract" ptitle="Learning functions on point clouds has applications in many fields, including computer vision, computer graphics, physics, and chemistry. Recently, there has been a growing interest in neural architectures that are invariant or equivariant to all three shape-preserving transformations of point clouds: translation, rotation, and permutation.
+In this paper, we present a first study of the approximation power of these architectures. We first derive two sufficient conditions for an equivariant architecture to have the universal approximation property, based on a novel characterization of the space of equivariant polynomials. We then use these conditions to show that two recently suggested models are universal, and for devising two other novel universal architectures."> Abstract</a>
+           <a href="https://arxiv.org/pdf/2010.02449" class="btn btn-default">Paper </a>
+       </div>
+</div><!-- end of row -->
 
 <!--Open problems -->
    <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -218,7 +219,7 @@ To address this challenge, we formulate this setup as a sequential decision prob
            <h2>Auxiliary Learning by Implicit Differentiation</h2>
            <p>
              Aviv Navon*, Idan Achituve*, Haggai Maron, Gal Chechik**, Ethan Fetaya** (*/** equal contribution)<br>
-           <i>Preprint, 2020</i> <br>
+           <i>International Conference on Learning Representations (ICLR) 2021</i> <br>
            </p>
            <a class="btn btn-default abstract" ptitle="Training with multiple auxiliary tasks is a common practice used in deep learning for improving the performance on the main task of interest. Two main challenges arise in this multi-task learning setting: (i) Designing useful auxiliary tasks; and (ii) Combining auxiliary tasks into a single coherent loss. We propose a novel framework, \textit{AuxiLearn}, that targets both challenges, based on implicit differentiation. First, when useful auxiliaries are known, we propose learning a network that combines all losses into a single coherent objective function. This network can learn \textit{non-linear} interactions between auxiliary tasks. Second, when no useful auxiliary task is known, we describe how to learn a network that generates a meaningful, novel auxiliary task. We evaluate AuxiLearn in a series of tasks and domains, including image segmentation and learning with attributes. We find that AuxiLearn consistently improves accuracy compared with competing methods."> Abstract</a>
            <a href="https://arxiv.org/abs/2007.02693" class="btn btn-default">Paper </a>
