--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
            </div>
            <div class="col-md-1"></div>
            <div class="col-md-16">
-               <h2>On Size Generalization in Graph Neural Networks</h2>
+               <h2>From Local Structures to Size Generalization in Graph Neural Networks</h2>
                <p>
                  Gilad Yehudai, Ethan Fetaya, Eli Meirom, Gal Chechik, Haggai Maron<br>
                  <i> Preprint, 2020 </i> <br>
