--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         My main fields of interest are machine learning, optimization and shape analysis. More specifically, I am working on applying deep learning to irregular domains (e.g., graphs, point clouds, and surfaces) and graph/shape matching problems.
         I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
         <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
-        I will be joining the <a href="https://vee.technion.ac.il/"> Electrical Engineering Department at the Technion</a> as an Assistant Professor in 2023.
+        I will be joining the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> as an Assistant Professor in 2023.
         My CV can be found <a href="cv.pdf">here</a>.
 
 
