--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       </div>
 
 
+
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
@@ -150,6 +153,25 @@
 
       </div><!-- end of row -->
 
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/jets/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Secondary Vertex Finding in Jets with Neural Networks</h2>
+                 <p>
+                 Jonathan Shlomi, Sanmay Ganguly, Eilam Gross, Kyle Cranmer, Yaron Lipman, Hadar Serviansky, Haggai Maron, Nimrod Segol<br>
+                 <i>European Physical Journal C, 2021</i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Jet classification is an important ingredient in measurements and searches for new physics at particle coliders, and secondary vertex reconstruction is a key intermediate step in building powerful jet classifiers. We use a neural network to perform vertex finding inside jets in order to improve the classification performance, with a focus on separation of bottom vs. charm flavor tagging. We implement a novel, universal set-to-graph model, which takes into account information from all tracks in a jet to determine if pairs of tracks originated from a common vertex. We explore different performance metrics and find our method to outperform traditional approaches in accurate secondary vertex reconstruction."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2008.02831" class="btn btn-default">Paper </a>
+
+
+             </div>
+      </div><!-- end of row -->
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -303,26 +325,6 @@ Abstract. Self-supervised learning (SSL) allows to learn useful repre- sentation
                  <a class="btn btn-default abstract" ptitle="Many problems in machine learning (ML) can be cast as learning functions from sets to graphs, or more generally to hypergraphs; in short, Set2Graph functions. Examples include clustering, learning vertex and edge features on graphs, and learning triplet data in a collection. Current neural network models that approximate Set2Graph functions come from two main ML sub-fields: equivariant learning, and similarity learning. Equivariant models would be in general computationally challenging or even infeasible, while similarity learning models can be shown to have limited expressive power. In this paper we suggest a neural network model family for learning Set2Graph functions that is both practical and of maximal expressive power (universal), that is, can approximate arbitrary continuous Set2Graph functions over compact sets. Testing our models on different machine learning tasks, including an application to particle physics, we find them favorable to existing baselines."> Abstract</a>
                  <a href="https://arxiv.org/abs/2002.08772" class="btn btn-default">Paper </a>
                  <a href="https://github.com/hadarser/SetToGraphPaper" class="btn btn-default">Code </a>
-
-             </div>
-      </div><!-- end of row -->
-
-      <!--Open problems -->
-         <div class="row" id="templatemo_publications_LargeScaleBD">
-             <div class="col-md-1"></div>
-             <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/jets/rep.png" width="450" " alt="">
-             </div>
-             <div class="col-md-1"></div>
-             <div class="col-md-16">
-                 <h2>Secondary Vertex Finding in Jets with Neural Networks</h2>
-                 <p>
-                 Jonathan Shlomi, Sanmay Ganguly, Eilam Gross, Kyle Cranmer, Yaron Lipman, Hadar Serviansky, Haggai Maron, Nimrod Segol<br>
-                 <i>Technical report, 2020</i> <br>
-                 </p>
-                 <a class="btn btn-default abstract" ptitle="Jet classification is an important ingredient in measurements and searches for new physics at particle coliders, and secondary vertex reconstruction is a key intermediate step in building powerful jet classifiers. We use a neural network to perform vertex finding inside jets in order to improve the classification performance, with a focus on separation of bottom vs. charm flavor tagging. We implement a novel, universal set-to-graph model, which takes into account information from all tracks in a jet to determine if pairs of tracks originated from a common vertex. We explore different performance metrics and find our method to outperform traditional approaches in accurate secondary vertex reconstruction."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2008.02831" class="btn btn-default">Paper </a>
-
 
              </div>
       </div><!-- end of row -->
