--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> Our paper <a href="https://arxiv.org/pdf/2104.06703.pdf">Deep Permutation Equivariant Structure from Motion</a> was accepted to ICCV 2021 as an <b>oral presentation</b>!</li>
                 <li> Two papers accepted to ICML 2021: <a href="https://arxiv.org/abs/2010.08853">From Local Structures to Size Generalization in Graph Neural Networks</a> and <a href="https://arxiv.org/abs/2010.05313">Controlling Graph Dynamics with  Reinforcement Learning and Graph Neural Networks</a>.</li>
                 <li> Two papers accepted to ICLR 2021: <a href="https://arxiv.org/pdf/2010.02449">On the Universality of Rotation Equivariant Point Cloud Networks</a> and <a href="https://arxiv.org/abs/2007.02693">Auxiliary Learning by Implicit Differentiation</a>.</li>
                 <li> See my talk on <a href='https://www.youtube.com/watch?v=k3E3XyMtQcA&list=PL7VfmMOOwNlJ5PndlhiMwjvqDTA6m1Z9i&index=2&t=120s'>Leveraging Permutation Group Symmetries for Designing Equivariant Neural Networks </a> at the <a href='https://sites.google.com/view/equiv-data-aug/home'> Workshop on Equivariance and Data Augmentation </a> hosted by the University of Pennsylvania. </li>
@@ -145,7 +146,8 @@
                  <h2>Deep Permutation Equivariant Structure from Motion</h2>
                  <p>
                    Dror Moran, Hodaya Koslowsky, Yoni Kasten, Haggai Maron, Meirav Galun, Ronen Basri<br>
-                   <i> Preprint, 2021 </i> <br>
+                   <i> International Conference on Computer Vision (ICCV) 2021  </i> <br>
+                   <p style="color:red;"> Oral presentation (3% acceptance rate)</p>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Existing deep methods produce highly accurate 3D reconstructions in stereo and multiview stereo settings, i.e., when cameras are both internally and externally calibrated. Nevertheless, the challenge of simultaneous recovery of camera poses and 3D scene structure in multiview settings with deep networks is still outstanding. Inspired by projective factorization for Structure from Motion (SFM) and by deep matrix completion techniques, we propose a neural network architecture that, given a set of point tracks in multiple images of a static scene, recovers both the camera parameters and a (sparse) scene structure by minimizing an unsupervised reprojection loss. Our network architecture is designed to respect the structure of the problem: the sought output is equivariant to permutations of both cameras and scene points. Notably, our method does not require initialization of camera parameters or 3D point locations. We test our architecture in two setups: (1) single scene reconstruction and (2) learning from multiple scenes. Our experiments, conducted on a variety of datasets in both internally calibrated and uncalibrated settings, indicate that our method accurately recovers pose and structure, on par with classical state of the art methods. Additionally, we show that a pre-trained network can be used to reconstruct novel scenes using inexpensive fine-tuning with no loss of accuracy."> Abstract</a>
                  <a href="https://arxiv.org/pdf/2104.06703.pdf" class="btn btn-default">Paper </a>
